# kvdb_rs

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-publish.yml
migrations/: 20250629141644_init.sql
src/: db.rs  main.rs  models.rs
src/handlers/: key.rs  mod.rs
