[package]
name = "kvdb_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros"] }
axum-limit = "0.1.0-alpha.2"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tower_governor = "0.7.0"
utoipa = { version = "5.4.0", features = ["axum_extras", "openapi_extensions"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.17.0", features = ["v4"] }
